environments/prod/kubernetes/services/kafka/kafka-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ui
  labels:
    app: kafka-ui
    env: prod
  namespace: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-ui
      env: prod
  revisionHistoryLimit: 1
  template:
    metadata:
      name: kafka-ui
      labels:
        env: prod
        app: kafka-ui
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
      - name: kafka-ui
        image: tchiotludo/akhq
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 512Mi
        ports:
        - containerPort: 8080
          name: http
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: 200-499
  name: kafka-ui
  namespace: kafka
  labels:
    Domain: kafka-ui.steblynskyi.com
spec:
  selector:
    app: kafka-ui
    env: prod
  ports:
  - port: 80
    name: http
    targetPort: 8080
    protocol: TCP
  type: NodePort
